# projecto-final-gogi-gogiloni-c-hiper

./: CMakeLists.txt  modelo.nn
src/: main.cpp  main2.cpp
src/utec/algebra/: tensor.h
src/utec/neural_network/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
src/utec/neural_network/data/: mnist_loader.h
tests/: test_loader.cpp
